--- a/css/cards.css
+++ b/css/cards.css
@@ -21,6 +21,7 @@
 }
 
 .blog__card h3 {
+  font-family: "Poppins", sans-serif;
   font-size: 1.3rem;
   font-weight: 700;
   margin-left: 15px;
