--- a/css/grid.css
+++ b/css/grid.css
@@ -13,7 +13,7 @@
   border-radius: 0.5rem;
   color: #fff;
   padding: 10px;
-  font-size: 4em;
+  /* font-size: 4em; */
   letter-spacing: 0.1em;
   display: flex;
   justify-content: center;
