--- a/css/nest.css
+++ b/css/nest.css
@@ -13,6 +13,7 @@
   grid-area: title;
   grid-column: 1 / span 1;
   grid-row: 1 / span 1;
+  font-family: Poppins, sans-serif;
   font-size: 30px;
   font-weight: 800;
   padding-left: 4px;
@@ -37,6 +38,7 @@
   margin-top: 18px;
   padding: 15px 25px;
   cursor: pointer;
+  text-align: center;
 }
 
 .grid__header a:hover {
