--- a/css/reset.css
+++ b/css/reset.css
@@ -11,8 +11,9 @@
 }
 
 body {
-  font-family: system-ui;
+  font-family: "Inter", sans-serif;
   font-size: 1.125rem;
+  font-weight: 300;
   line-height: 1.6;
   min-height: 100vh;
 }
